--- a/index.html
+++ b/index.html
@@ -5,37 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Web Resume</title>
 </head>
 <body>
     <!-- ! START NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu shadow fixed-top">
         <div class="container-xl">
           <a class="navbar-brand" href="#">
-              <img src="img/nisakara.png" alt="logo" class="logo-style">
+              <img src="images/nisakara.png" alt="logo" class="logo-style">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link" href="#">Services</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link" href="#">Testimonials</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link" href="#">FAQ</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-pill">
                 <a class="nav-link" href="#">Contact</a>
               </li>
               <button type="button" class="rounded-pill btn-rounded">
@@ -44,17 +47,63 @@
                   <i class="fas fa-phone-alt"></i>
                 </span>
               </button>
-              
             </ul>
           </div>
         </div>
       </nav>
 
+      <!-- ! START THE JUMBOTORON / INTRO -->
+
+      <section id="home" class="intro-section">
+        <div class="container">
+          <div class="row align-items-center text-white">
+            <!-- INTRO INTRO INTRO INTRO-->
+            <div class="col-md-6 intros text-start">
+              <h1 class="display-2">
+                <span class="display-2--intro">Welcome! It's Nisakara</span>
+                <span class="display-2--description lh-base">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis corrupti labore aliquam neque asperiores perferendis, ipsum ratione consequatur fugit est.
+                </span>
+              </h1> 
+              <button type="button" class="rounded-pill btn-rounded">
+                Get in Touch
+                <span>
+                  <i class="fas fa-arrow-right"></i>
+                </span>
+              </button>
+            </div>
+            <!-- CONTENT CONTENT CONTENT CONTENT -->
+            <div class="col-md-6 intros text-center">
+              <div class="video-box position-relative">
+                <img src="images/arts/intro-section-illustration.png" alt="video illustration" class="img-fluid">
+                <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
+                  <span>
+                    <i class="fas fa-play-circle text-secondary" style="font-size: 6rem;"></i>
+                  </span>
+                  <span class="border-animation border-animation--border1"></span>
+                  <span class="border-animation border-animation--border2"></span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L30,160C60,160,120,160,180,165.3C240,171,300,181,360,197.3C420,213,480,235,540,213.3C600,192,660,128,720,128C780,128,840,192,900,202.7C960,213,1020,171,1080,144C1140,117,1200,107,1260,117.3C1320,128,1380,160,1410,176L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+      </section>
 
 
 
 
-    
+
+    <script src="assets/vendors/js/glightbox.min.js"></script>
+    <script type="text/javascript">
+      const lightbox = GLightbox({
+            'href': 'https://youtu.be/8UVNT4wvIGY',
+            'type': 'video',
+            'source': 'youtube',
+            'width': 900,
+            'autoPlayVideo': 'true'
+      })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
