--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
 
-      <!-- ! START THE JUMBOTORON / INTRO -->
+    <!-- ! START THE JUMBOTORON / INTRO -->
 
       <section id="home" class="intro-section">
         <div class="container">
@@ -90,6 +90,131 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L30,160C60,160,120,160,180,165.3C240,171,300,181,360,197.3C420,213,480,235,540,213.3C600,192,660,128,720,128C780,128,840,192,900,202.7C960,213,1020,171,1080,144C1140,117,1200,107,1260,117.3C1320,128,1380,160,1410,176L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
       </section>
 
+    <!-- ! START COMPANIES -->
+      <section id="companies" class="companies">
+        <div class="container">
+          <div class="row text-center">
+            <h4 class="fw-bold lead mb-3">Trusted by Companies Like</h4>
+            <div class="heading-line mb-5"></div>
+          </div>
+        </div>
+        <!-- START COMPANIES LOGO -->
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-1.png" alt="company 1 logo" title="company 1 logo" class="img-fluid"></div>
+            </div>
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-2.png" alt="company 2 logo" title="company 2 logo" class="img-fluid"></div>
+            </div>
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-3.png" alt="company 3 logo" title="company 3 logo" class="img-fluid"></div>
+            </div>
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-4.png" alt="company 4 logo" title="company 4 logo" class="img-fluid"></div>
+            </div>
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-5.png" alt="company 5 logo" title="company 5 logo" class="img-fluid"></div>
+            </div>
+            <div class="col-md-4 col-lg-2">
+              <div class="companies__logo-box shadow-sm">
+                <img src="images/companies/company-6.png" alt="company 6 logo" title="company 6 logo" class="img-fluid"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    
+      <!-- ! START SERVICES -->
+      <section id="services" class="services">
+        <div class="container">
+          <div class="row">
+            <h1 class="display-3 fw-bold text-center">Our Services</h1>
+            <div class="heading-line mb-5"></div>
+          </div>
+        </div>
+        <!-- START DESCRIPTION -->
+        <div class="container">
+          <div class="row pt-2 pb-2 mt-5 mb-3">
+            <div class="col-md-6 border-right">
+              <div class="bg-white p-3">
+                <h2 class="fw-bold text-capitalize text-center">
+                  Our services range from intial design to deployment anywhere anytime
+                </h2>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="bg-white p-4 text-start">
+                <p class="fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum autem totam corrupti minima dolorem rerum excepturi praesentium. Iusto, deserunt quas! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, non!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- START CONTENT SERVICES -->
+        <div class="container">
+          <!-- MARKETING -->
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon fas fa-paper-plane"></div>
+                <h3 class="display-3--title mt-1">Marketing</h3>  
+                <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum impedit voluptate consequuntur incidunt illo modi rerum iure, accusamus, vero asperiores aliquam ut. Impedit possimus minima repellendus dolor non.</p>
+                <button type="button" class="rounded-pill btn-rounded border-primary">
+                  Learn More
+                  <span>
+                    <i class="fas fa-phone-alt"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content"></div>
+            </div>
+          </div>
+          <!-- WEB DEVELOPMENT -->
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content"></div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon fas fa-code"></div>
+                <h3 class="display-3--title mt-1">Web Development</h3>  
+                <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum impedit voluptate consequuntur incidunt illo modi rerum iure, accusamus, vero asperiores aliquam ut. Impedit possimus minima repellendus dolor non.</p>
+                <button type="button" class="rounded-pill btn-rounded border-primary">
+                  Learn More
+                  <span>
+                    <i class="fas fa-phone-alt"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- CLOUD HOSTING -->
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon fas fa-cloud"></div>
+                <h3 class="display-3--title mt-1">Cloud Hosting</h3>  
+                <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum impedit voluptate consequuntur incidunt illo modi rerum iure, accusamus, vero asperiores aliquam ut. Impedit possimus minima repellendus dolor non.</p>
+                <button type="button" class="rounded-pill btn-rounded border-primary">
+                  Learn More
+                  <span>
+                    <i class="fas fa-phone-alt"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+              <div class="services__content"></div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
